docs: company & contact api docs
company & contact api docs
